--- a/src/main/resources/templates/layouts/login.html
+++ b/src/main/resources/templates/layouts/login.html
@@ -20,7 +20,7 @@
 
 <body>
 
-	<form th:action="@{/doLogin}" method="POST">
+	<form th:action="@{/doLogin}" method="POST" th:object="${myCaptcha}" id="myForm">
 
 		<section class="vh-100" style="background-color: #508bfc;">
 			<div class="container py-5 h-100">
@@ -30,11 +30,18 @@
 							<div class="card-body p-5 text-center">
 
 								<h3 class="mb-5">Sign in</h3>
+								
+								<div th:if="${param.error}" class="alert alert-danger text-center">Invalid User Name
+								and Password</div>
+								
+								<div th:if="${param.logout}" class="alert alert-danger">
+								You have been logout</div>
 
 								<div class="form-outline mb-4">
 									<div class="row">
 										<div class="col-md-2">
-											<img src="https://img.icons8.com/ios-glyphs/30/000000/gender-neutral-user.png"/>
+											<img
+												src="https://img.icons8.com/ios-glyphs/30/000000/gender-neutral-user.png" />
 										</div>
 										<div class="col-md-10">
 											<input type="text" id="typeEmailX-2" class="form-control form-control-lg"
@@ -48,7 +55,8 @@
 								<div class="form-outline mb-4">
 									<div class="row">
 										<div class="col-md-2">
-										<img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png"/>								</div>
+											<img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
+										</div>
 										<div class="col-md-10">
 											<input type="password" id="typePasswordX-2"
 												class="form-control form-control-lg" name="password"
@@ -66,8 +74,34 @@
 								</div>
 
 
-								
-								<button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+								<div class="form-group text-center" style="margin: 3px;">
+									<img th:src="*{'data:realCaptcha/jpg;base64,'+ realCaptcha}"
+										style="height: 50px;" />
+								</div>
+
+								<div class="form-group text-center">
+									<!-- <label>ENTER CAPTCHA</label> -->
+
+									<div class="row">
+										<div class="col-md-3"></div>
+										<div class="col-md-6" style="margin: 1.5px;">
+											<input type="hidden" th:field="*{hiddenCaptcha}" />
+											<input style="text-align: center" type="text" th:field="*{captcha}"
+												class="form-control" placeholder="Enter Captcha" />
+										</div>
+										<div class="col-md-3"></div>
+
+									</div>
+
+
+								</div>
+
+								<div class="form-group">
+									<!--<button class="btn btn-primary btn-block" type="submit">Login</button>-->
+									<button type="submit"
+										class="btn btn-primary input-block-level form-control" onclick="myFunction()">Login</button>
+								</div>
+
 
 								<hr class="my-4">
 
@@ -82,7 +116,23 @@
 
 	</form>
 
+	<script>
+		function myFunction() {
+
+			//document.getElementById("myForm").submit();
+
+			console.log("myfunction")
+			var hiddenCaptcha = document.getElementById("hiddenCaptcha").value;
+			var captcha = document.getElementById("captcha").value;
+		
+
+			document.getElementById("myForm").submit();
+		}
+
+	</script>
 </body>
+
+
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
