--- a/src/main/resources/templates/layouts/index.html
+++ b/src/main/resources/templates/layouts/index.html
@@ -56,9 +56,9 @@
             </div>
            
            
-            <div class="box-body">
-              Start creating your amazing application!
-            </div><!-- /.box-body -->
+            <div class="box-body">Start creating your amazing application!
+			
+		
             
             
             <div class="box-footer">
