code commit@Rahul
purchase approval hase been done

--- a/src/main/resources/templates/layouts/editview/editModule.html
+++ b/src/main/resources/templates/layouts/editview/editModule.html
@@ -67,7 +67,7 @@
 													<div class="form-group col-md-12">
 														<label for="inputEmail4">Module Code</label> <input type="text"
 															class="form-control" placeholder="module code"
-															th:field="*{moduleCode}" disabled>
+															th:field="*{moduleCode}">
 													</div>
 													<div class="form-group col-md-12">
 														<label for="inputPassword4">Module Name</label> <input
@@ -85,14 +85,14 @@
 														<input class="form-check-input" type="radio"
 															name="inlineRadioOptions" id="inlineRadio1" value="Y">
 														<label class="form-check-label" for="inlineRadio1"
-															th:field="*{active}">Active</label>
+															>Active</label>
 													</div>
 
 													<div class="form-check form-check-inline">
 														<input class="form-check-input" type="radio"
 															name="inlineRadioOptions" id="inlineRadio1" value="N">
 														<label class="form-check-label" for="inlineRadio1"
-															th:field="*{active}">In-Active</label>
+															>In-Active</label>
 													</div>
 
 												</div><!-- /.box-body -->
