--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -46,7 +46,9 @@
 					<li><a th:href="@{/financialyear/}"><i class="fa fa-circle-o"></i>Financial year</a></li>
 					<li><a th:href="@{/financialactiveyear/}"><i class="fa fa-circle-o"></i> Active Financial Year</a>
 					</li>
-					<li><a th:href="@{/user/}"><i class="fa fa-circle-o"></i>Users</a></li>
+					
+					<li th:if="${#request.isUserInRole('USER')}"><a th:href="@{/user/}"><i class="fa fa-circle-o"></i>Users</a></li>
+					
 					<li><a th:href="@{/userrights/}"><i class="fa fa-circle-o"></i>User Rights</a></li>
 					<li><a th:href="@{/module/}"><i class="fa fa-circle-o"></i>Module</a></li>
 					<li><a th:href="@{/program/}"><i class="fa fa-circle-o"></i>Program</a></li>
