--- a/src/main/resources/templates/layouts/Master/purchaseOrderApproval.html
+++ b/src/main/resources/templates/layouts/Master/purchaseOrderApproval.html
@@ -1,12 +1,200 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+
+<head xmlns:th="http://www.thymeleaf.org">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>AdminLTE 2 | General Form Elements</title>
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
+	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+
+
 </head>
-<body>
+
+<body class="hold-transition skin-blue sidebar-mini">
+	<div class="wrapper">
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
+
+			<div class="wrapper">
+
+				<section class="content-wrapper">
 
 
-<h4>purchase order Approval</h4>
+					<div class="row">
+						<!-- left column -->
+						<div class="col-md-12">
+
+
+
+							<div class="col-md-12" style="margin-top: 20px;">
+
+								<div class="box box-primary">
+									<div class="box-header with-border">
+										<h3 class="box-title">Purchase Order Approval</h3>
+									</div>
+									<!-- form start -->
+									<form role="form">
+										<div class="box-body">
+											<div class="table-responsive-sm">
+												<table class="table table-striped" style="width: 80%">
+													<thead>
+														<tr>
+															<th scope="col">#</th>
+															<th scope="col">PO Number</th>
+															<th scope="col">PO Date</th>
+															<th scope="col">Po Type</th>
+															<th scope="col">Supplier</th>
+															<th scope="col">Supply Date</th>
+															<th scope="col">Delivery Date</th>
+
+
+															<th scope="col">Approval Status</th>
+
+
+
+															<th scope="col">Action</th>
+														</tr>
+													</thead>
+													<tbody>
+
+
+														<tr th:each="po,iter  : ${listPurchaseOrder}">
+															<td th:text="${iter.index}">1</td>
+															<td th:text="${po.poNumber}">Garrett Winters</td>
+															<td th:text="${po.poDate}">Garrett Winters</td>
+															<td th:text="${po.poType}">Good Guys</td>
+															
+															<td th:text="${po.supplier.supplierName}">Garrett Winters</td>
+															<td th:text="${po.supplyDate}">Garrett Winters</td>
+															<td th:text="${po.deliveryDate}">Good Guys</td>
+
+
+
+															<td class="text-center"
+																th:if="${po.approvalStatus == 'P'}">
+																<div class="dropdown show">
+																	<a class="btn btn-primary dropdown-toggle" href="#"
+																		role="button" id="dropdownMenuLink"
+																		data-toggle="dropdown" aria-haspopup="true"
+																		aria-expanded="false"> Pending
+																	</a>
+
+																	<div class="dropdown-menu"
+																		aria-labelledby="dropdownMenuLink">
+																		<a class="dropdown-item"
+																			th:href="@{/poapproval/approve/{id}/{status}/(id=${po.poNumber},status=${'Y'})}">Approved</a>
+																		<a class="dropdown-item"
+																			th:href="@{/poapproval/approve/{id}/{status}/(id=${po.poNumber},status=${'N'})}">Cancel</a>
+
+																	</div>
+																</div>
+															</td>
+
+															<td class="text-center"
+																th:if="${po.approvalStatus == 'Y'}">
+																<div class="dropdown show">
+																	<a class="btn btn-primary dropdown-toggle" href="#"
+																		role="button" id="dropdownMenuLink"
+																		data-toggle="dropdown" aria-haspopup="true"
+																		aria-expanded="false"> Approved
+																	</a>
+
+																	<div class="dropdown-menu"
+																		aria-labelledby="dropdownMenuLink">
+																		<a class="dropdown-item"
+																			th:href="@{/poapproval/approve/{id}/{status}/(id=${po.poNumber},status=${'Y'})}">Approved</a>
+																		<a class="dropdown-item"
+																			th:href="@{/poapproval/approve/{id}/{status}/(id=${po.poNumber},status=${'N'})}">Cancel</a>
+
+																	</div>
+																</div>
+															</td>
+
+															<td class="text-center"
+																th:if="${po.approvalStatus == 'N'}">
+																<div class="dropdown show">
+																	<a class="btn btn-primary dropdown-toggle" href="#"
+																		role="button" id="dropdownMenuLink"
+																		data-toggle="dropdown" aria-haspopup="true"
+																		aria-expanded="false"> Cancelled
+																	</a>
+
+																	<div class="dropdown-menu"
+																		aria-labelledby="dropdownMenuLink">
+																		<a class="dropdown-item"
+																			th:href="@{/poapproval/approve/{id}/{status}/(id=${po.poNumber},status=${'Y'})}">Approved</a>
+																		<a class="dropdown-item"
+																			th:href="@{/poapproval/approve/{id}/{status}/(id=${po.poNumber},status=${'N'})}">Cancel</a>
+
+																	</div>
+																</div>
+															</td>
+
+															<!--<td class="text-center"
+																th:if="${indent.approvalStatus1 == 'Y' and indent.approvalStatus2 == 'Y' and indent.approvalStatus3 == 'Y'}">
+																<div class="dropdown show">
+																	<a class="btn btn-primary dropdown-toggle" href="#"
+																		role="button" id="dropdownMenuLink"
+																		data-toggle="dropdown" aria-haspopup="true"
+																		aria-expanded="false">
+																		&nbsp&nbsp&nbsp&nbsp&nbspApproved&nbsp&nbsp&nbsp&nbsp&nbsp
+																	</a>
+
+
+																</div>
+															</td>-->
+
+
+															<!--<a
+														th:href="@{/openindent/approve/{id}(id=${indent.indentNumber})}">view</a>-->
+
+
+															<td><span> <a
+																		th:href="@{/openindent/view/{id}(id=${po.poNumber})}">view</a></span>
+															</td>
+
+
+														</tr>
+
+
+													</tbody>
+												</table>
+											</div>
+										</div>
+
+										<div class="box-footer">
+											<input type="submit" value="Back" onclick='window.history.back();'
+												class="btn btn-link" />
+										</div>
+
+									</form>
+								</div>
+							</div>
+
+
+
+						</div>
+
+					</div>
+				</section>
+			</div>
+
+			<div th:replace="fragments/footer :: footer">...</div>
+			<!--   <section class="content">
+        
+        </section>-->
+			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
+			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+
 </body>
+
 </html>
