--- a/src/main/resources/templates/layouts/listview/listofmodulemaster.html
+++ b/src/main/resources/templates/layouts/listview/listofmodulemaster.html
@@ -1,121 +1,109 @@
 <!DOCTYPE html>
+<html>
 
-<!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{layouts/main-layout :: main-fragment(  
-                                                ~{::title},
-                                                ~{:: #home-static-resources},
-                                                ~{:: #home-header},
-                                                ~{:: #home-nav},
-                                                ~{:: #home-main-content},  
-                                                ~{:: #home-footer}
-                                               )}">
+<head xmlns:th="http://www.thymeleaf.org">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>AdminLTE 2 | General Form Elements</title>
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
+	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
-<head>
-<title>Title of Home Page</title>
-
-<th:block id="home-static-resources">
-
-	<script type="text/javascript" src="../static/home.js"
-		th:src="@{/home.js}"></script>
-	<link rel="stylesheet" type="text/css" href="../static/home.css"
-		th:href="@{/home.css}" />
-
-</th:block>
 
 </head>
-<body>
 
-	<div id="home-header">ERP WhareHouse</div>
+<body class="hold-transition skin-blue sidebar-mini">
+	<div class="wrapper">
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
 
-	<div id="home-nav"
-		th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
-	</div>
+			<div class="wrapper">
 
-	<div id="home-main-content">
-		<h2>All Module</h2>
+				<section class="content-wrapper">
 
 
+					<div class="row">
+						<!-- left column -->
+						<div class="col-md-12">
 
-		<div class="container">
-			<div class="container-fluid p-0">
-				<h1 class="h3 mb-3">Clients</h1>
-				<div class="row">
-					<div class="col-xl-8">
-						<div class="card">
-							<div class="card-header pb-0">
-								<div class="card-actions float-right">
-									<div class="dropdown show">
-										<a href="#" data-toggle="dropdown" data-display="static">
 
-										</a>
 
-										<div class="dropdown-menu dropdown-menu-right">
-											<a class="dropdown-item" href="#">Action</a> <a
-												class="dropdown-item" href="#">Another action</a> <a
-												class="dropdown-item" href="#">Something else here</a>
-										</div>
+							<div class="col-md-12" style="margin-top: 20px;">
+
+								<div class="box box-primary">
+									<div class="box-header with-border">
+										<h3 class="box-title">List of Module</h3>
 									</div>
+									<!-- form start -->
+									<form role="form">
+										<div class="box-body">
+											<div class="table-responsive-sm">
+												<table class="table table-striped" style="width: 80%">
+													<thead>
+														<tr>
+															<th scope="col">#</th>
+															<th scope="col">Module Code</th>
+															<th scope="col">Module Name</th>
+															<th scope="col">Inserted By</th>
+															<th scope="col">Status</th>
+															<th scope="col">Action</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr th:each="module,iter  : ${listModule}">
+															<td th:text="${iter.index}">1</td>
+															<td th:text="${module.moduleCode}">Garrett Winters</td>
+															<td th:text="${module.moduleName}">Garrett Winters</td>
+															<td th:text="${module.insertedBy}">Good Guys</td>
+
+															<td><span class="badge bg-success"
+																	th:text="${module.active}">Active</span></td>
+
+															<td><span> <a
+																		th:href="@{/module/edit/{id}(id=${module.moduleCode})}">edit</a></span>
+																<span> <a
+																		th:href="@{/module/delete/{id}(id=${module.moduleCode})}">delete</a></span>
+															</td>
+														</tr>
+
+
+
+													</tbody>
+												</table>
+											</div>
+										</div>
+
+										<div class="box-footer">
+											<input type="submit" value="Back" onclick='window.history.back();'
+												class="btn btn-link" />
+										</div>
+
+									</form>
 								</div>
-								<h5 class="card-title mb-0">Clients</h5>
-							</div>
-							<div class="card-body">
-								<div class="table-responsive-sm">
-									<table class="table table-striped" style="width: 80%">
-										<thead>
-											<tr>
-												<th scope="col">#</th>
-												<th scope="col">Module Code</th>
-												<th scope="col">Module Name</th>
-												<th scope="col">Inserted By</th>
-												<th scope="col">Status</th>
-												<th scope="col">Action</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr th:each="module,iter  : ${listModule}">
-												<td th:text="${iter.index}">1</td>
-												<td th:text="${module.moduleCode}">Garrett Winters</td>
-												<td th:text="${module.moduleName}">Garrett Winters</td>
-												<td th:text="${module.insertedBy}">Good Guys</td>
-
-												<td><span class="badge bg-success"
-													th:text="${module.active}">Active</span></td>
-
-												<td><span> <a th:href="@{/module/edit/{id}(id=${module.moduleCode})}">edit</a></span> <span> <a
-														th:href="@{/module/delete/{id}(id=${module.moduleCode})}">delete</a></span></td>
-											</tr>
-
-
-
-
-										</tbody>
-									</table>
-								</div>
 							</div>
 
-							<div class="row" style="margin: 10px">
-								<input type="submit" value="Back"  onclick='javascript:window.history.back()'
-									class="btn btn-link" /> 
-							</div>
+
+
 						</div>
+
 					</div>
-
-
-				</div>
-
+				</section>
 			</div>
-		</div>
 
-
-
-	</div>
-
-
-	<!-- <div id="home-footer" th:replace="~{/fragments/app-fragments :: copyright}">
-        Footer
-    </div> -->
-
+			<div th:replace="fragments/footer :: footer">...</div>
+			<!--   <section class="content">
+        
+        </section>-->
+			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
+			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 
 </body>
+
 </html>
