code commit@Rahul
work on header

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,8 +25,8 @@
 
 		<div>
 
-<div>
-<span>HELLO</span>
+<div class="w-100 text-center p-10">
+<h4 style="color: white;">Enterprise Business Suite</h4>
 </div>
 
 			<div class="navbar-custom-menu">
