code commit@Rahul
change title name in all form

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -42,8 +42,8 @@
 					<!-- User Account: style can be found in dropdown.less -->
 					<li class="dropdown user user-menu">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							<img src="/img/contact.png" class="user-image" alt="User Image">
-							<span class="hidden-xs">User</span>
+							<img src="https://img.icons8.com/color/48/000000/company.png" class="user-image" style="background-color: white;"/>
+							<span class="hidden-xs">Access Infotech</span>
 						</a>
 						<ul class="dropdown-menu">
 							<!-- User image -->
