--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -135,6 +135,8 @@
 									Comparitive
 									<br>and approval</a></li>
 							<li><a th:href="@{/purchaseorder/}"><i class="fa fa-circle-o"></i>Purchase Order</a></li>
+							
+							<li><a th:href="@{/poapproval/}"><i class="fa fa-circle-o"></i>PO Approval</a></li>
 
 
 
