--- a/src/main/resources/templates/layouts/Master/companyDetail.html
+++ b/src/main/resources/templates/layouts/Master/companyDetail.html
@@ -662,14 +662,14 @@
 
 														<div class="col-sm-12" style="text-align:right">
 
-															<a id="add_row" class="fa fa-plus" aria-hidden="true"
+															<a id="add_row_site" class="fa fa-plus" aria-hidden="true"
 																style="font-size: 24px; color: #001080"></a>&nbsp;&nbsp;&nbsp;
-															<a id='delete_row' class="fa fa-trash"
+															<a id='delete_row_site' class="fa fa-trash"
 																style="font-size: 24px; color: #399490fc"
 																aria-hidden="true"></a>
 														</div>
 
-														<table class="table table-sm">
+														<table class="table table-sm" id="example2">
 															<thead>
 																<tr>
 																	<th scope="col">Site Code</th>
@@ -680,7 +680,7 @@
 																</tr>
 															</thead>
 															<tbody>
-																<tr>
+																<tr id="ad0">
 																	<th scope="row">
 																		<fieldset>
 																			<input type="text" class="form-control"
@@ -717,70 +717,8 @@
 																		</fieldset>
 																	</td>
 																</tr>
-																<tr>
-																	<th scope="row">
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</th>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																</tr>
-																<tr>
-																	<th scope="row">
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</th>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																</tr>
+
+																<tr id="ad1"></tr>
 
 															</tbody>
 														</table>
@@ -832,6 +770,7 @@
 	<script>
 
 		var idIndex = 0;
+		var idIndex2 = 0;
 		$(document).ready(function () {
 			console.log("document is ready!");
 			var i = 1;
@@ -871,6 +810,44 @@
 				}
 			});
 		});
+
+
+
+		// for Site Office 
+		$(document).ready(function () {
+			console.log("site is ready!");
+			var j = 1;
+			$('#add_row_site').click(function () {
+				idIndex2++;
+				$('#ad' + j).html(
+					"<th scope='row'><fieldset><input type='text' class='form-control' placeholder=''"
+					+ "name='siteOffice[" + idIndex2 + "].siteCode'></fieldset></th>"
+					+ "<td><fieldset><input type='text' class='form-control' placeholder=''name='siteOffice[" + idIndex2 + "].siteLocation'></fieldset></td>"
+					+ "<td><fieldset><input type='text' class='form-control' placeholder=''name='siteOffice[" + idIndex2 + "].siteIncharge'></fieldset></td>"
+					+ "<td><fieldset><input type='text' class='form-control'placeholder=''name='siteOffice[" + idIndex2 + "].siteAddress'></fieldset></td>"
+					+ "<td><fieldset><input type='number' class='form-control' placeholder=''name='siteOffice[" + idIndex2 + "].approvedBudget'></fieldset></td>"
+				);
+
+				$('#example2').append(
+					'<tr id="ad'
+					+ (j + 1)
+					+ '"></tr>');
+
+				j++;
+			});
+
+			$("#delete_row_site").click(function () {
+				if (j > 1) {
+					$("#ad" + (j - 1)).html('');
+					
+					j--;
+					idIndex2--;
+				}
+			});
+
+		});
+
+
 	</script>
 
 	<!--   <section class="content">
