--- a/src/main/resources/templates/layouts/Master/itemMaster.html
+++ b/src/main/resources/templates/layouts/Master/itemMaster.html
@@ -11,8 +11,8 @@
 	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
 	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
-	
-	
+
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 </head>
@@ -451,13 +451,23 @@
 												<!-- packing detail -->
 
 												<div id="packing" class="tab-pane fade">
-													
+
 													<p></p>
 													<p></p>
 													<div class="box">
 														<h5>Packing Details</h5>
 
-														<table class="table table-sm">
+
+														<div class="col-sm-12" style="text-align:right">
+
+															<a id="add_row" class="fa fa-plus" aria-hidden="true"
+																style="font-size: 24px; color: #001080"></a>&nbsp;&nbsp;&nbsp;
+															<a id='delete_row' class="fa fa-trash"
+																style="font-size: 24px; color: #399490fc"
+																aria-hidden="true"></a>
+														</div>
+
+														<table class="table table-sm" id="example">
 															<thead>
 																<tr>
 																	<th scope="col">Packing Code</th>
@@ -465,114 +475,52 @@
 																	<th scope="col">Unit Name</th>
 																	<th scope="col">Qty</th>
 																	<th scope="col">BarCode</th>
-																	
+
 
 
 																</tr>
 															</thead>
 															<tbody>
-																<tr>
+																<tr id="addr0">
 																	<th scope="row">
 																		<fieldset>
 																			<input type="text" class="form-control"
-																				placeholder="" readonly>
+																				placeholder=""
+																				name="packingDetails[0].packingCode">
 																		</fieldset>
 																	</th>
 																	<td>
 																		<fieldset>
 																			<input type="text" class="form-control"
-																				placeholder="" readonly>
+																				placeholder=""
+																				name="packingDetails[0].packingName">
 																		</fieldset>
 																	</td>
 																	<td>
 																		<fieldset>
 																			<input type="text" class="form-control"
 																				placeholder=""
-																				name="insuranceDetail[0].custCode">
+																				name="packingDetails[0].UnitName">
 																		</fieldset>
 																	</td>
 																	<td>
 																		<fieldset>
-																			<input type="date" class="form-control"
+																			<input type="number" class="form-control"
 																				placeholder=""
-																				name="insuranceDetail[0].renewalDate">
+																				name="packingDetails[0].qty">
 																		</fieldset>
 																	</td>
 																	<td>
 																		<fieldset>
 																			<input type="text" class="form-control"
 																				placeholder=""
-																				name="insuranceDetail[0].version">
+																				name="packingDetails[0].barCode">
 																		</fieldset>
 																	</td>
-																	
+
 																</tr>
-																<tr>
-																	<th scope="row">
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</th>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	
-																</tr>
-																<tr>
-																	<th scope="row">
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</th>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	<td>
-																		<fieldset>
-																			<input type="text" class="form-control"
-																				placeholder="">
-																		</fieldset>
-																	</td>
-																	
-																</tr>
+
+																<tr id="addr1"></tr>
 
 															</tbody>
 														</table>
@@ -584,18 +532,21 @@
 												<!--end packing detail -->
 
 
-												<!--	<div class="box-body">
-									</div>
 
-									<div class="box-footer">
-										<button type="submit" class="btn btn-primary">Submit</button>
-									</div>
--->
+
+												<div class="box-footer">
+													<button type="submit" class="btn btn-primary">Submit</button>
+												</div>
+
 
 											</div>
 										</div>
 									</div>
 								</form>
+								
+								<div class="box-footer">
+									<a th:href="@{/item/list}">View All Item</a>
+								</div>
 							</div>
 						</div>
 
@@ -607,6 +558,44 @@
 				</section>
 			</div>
 			<div th:replace="fragments/footer :: footer">...</div>
+
+
+			<script>
+				var idIndex = 0;
+				$(document).ready(function () {
+					console.log("item master is ready!");
+					var i = 1;
+					$('#add_row').click(function () {
+						idIndex++;
+						$('#addr' + i).html(
+							"<th scope='row'><fieldset><input type='text' class='form-control'placeholder='' name='insuranceDetail[" + idIndex + "].packingCode'></fieldset></th>"
+							+ "<td><fieldset><input type='text' class='form-control'placeholder='' name='insuranceDetail[" + idIndex + "].packingName'></fieldset></td>"
+							+ "<td><fieldset><input type='text' class='form-control' placeholder=''name='insuranceDetail[" + idIndex + "].unitName'></fieldset></td>"
+							+ "<td><fieldset><input type='number' class='form-control' placeholder=''name='insuranceDetail[" + idIndex + "].qty'></fieldset></td>"
+							+ "<td><fieldset><input type='text' class='form-control' placeholder=''name='insuranceDetail[" + idIndex + "].barCode'></fieldset></td>"
+						);
+
+						$('#example').append(
+							'<tr id="addr'
+							+ (i + 1)
+							+ '"></tr>');
+
+						i++;
+
+					});
+
+					$("#delete_row").click(function () {
+						if (i > 1) {
+							$("#addr" + (i - 1)).html('');
+							$('#_cr').val(i - 1);
+							i--;
+							idIndex--;
+						}
+					});
+
+				});
+
+			</script>
 			<!--   <section class="content">
         
         </section>-->
